--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
       <h2 id="title">Travel Costs</h2>
     </div>
     <div id="mainContent"></div>
-    <ul id="menu">
-      <li>test</li>
-      <li>test test</li>
-    </ul>
+    <ul id="menu"></ul>
   </body>
 </html>
