--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <div id="heather">
-      <a href="#menu" id="menuButton" onclick="aaf.menuButtonClick();">☰</a>
-      <h2 id="title">Travel Costs</h2>
+      <div id="menuButton" onclick="aaf.menuButtonClick();">☰</div>
+      <span id="title" class="rborder">Travel Costs</span>
     </div>
     <div id="mainContent"></div>
     <ul id="menu"></ul>
