--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <!-- MyApp -->
     <script src="js/extensions.js"></script>
+    <script src="js/appStores.js"></script>
     <script src="js/AppsAndForms.js"></script>
     <script src="js/custom.js"></script>
     <link rel="manifest" href="manifest.json">
