--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Travel Costs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Pragma" content="no-cache">
+    <!--<meta http-equiv="Pragma" content="no-cache">-->
     <meta charset="utf-8" />
     
     <!-- MyApp -->
