--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   </head>
   <body>
     <div id="heather">
-      <div id="menuButton" onclick="aaf.menuButtonClick();">☰</div>
+      <div id="menuButton" onclick="aaf.menuOpen();">☰</div>
       <span id="title" class="rborder">Travel Costs</span>
     </div>
     <div id="mainContent"></div>
-    <ul id="menu"></ul>
-    <div id="mainContent"></div>
+    <ul id="menu" onclick="aaf.menuHide(this);"></ul>
   </body>
 </html>
