--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="heather">
       <div id="menuButton" onclick="appCore.menuOpen();">☰</div>
       <span id="title" class="rborder">Travel Costs</span>
+      <div id="toolBar"></div>
       <span id="version"></span>
     </div>
     <div id="mainContent"></div>
