--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Header -->
     <div id="header">
-      <div id="menuButton" onclick="app.UI.menu.open();">☰</div>
+      <div id="menuButton" onclick="app.UI.menu.toggle();">☰</div>
       <span id="title" class="rborder">Travel Costs</span>
       <div id="toolBar"></div>
       <span id="version"></span>
